<resources>
    <string name="app_name">CloudOnFoot</string>
    <string name="title_home">首页</string>
    <string name="nav_lists">列表</string>
    <string name="nav_warning">报警</string>
    <string name="nav_counts">统计</string>
    <string name="nav_personal">个人中心</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_count_blank_fragment">统计</string>
    <string name="title_main_blank_fragment">首页</string>
    <string name="title_devicelist_blank_fragment">设备列表</string>
    <string name="title_warning_blank_fragment">报警</string>
    <string name="title_personal_blank_fragment">个人中心</string>
</resources>
