<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_lists"
            android:icon="@drawable/ic_lists_black_24dp"
            android:title="@string/nav_lists"/>

    <item
        android:id="@+id/navigation_warning"
        android:icon="@drawable/ic_warning_black_24dp"
        android:title="@string/nav_warning"/>

    <item
            android:id="@+id/navigation_counts"
            android:icon="@drawable/ic_counts_black_24dp"
            android:title="@string/nav_counts"/>
    <item
            android:id="@+id/navigation_personal"
            android:icon="@drawable/ic_personal_black_24dp"
            android:title="@string/nav_personal"/>
</menu>